# J2401_JASA_SSID-Single-Index

./: .Rhistory  .gitignore  .nojekyll  2024-05-08_SPIDraft.docx  CNAME  FellowshipRefs-biblatex.bib  KS2D.py  Mitchell2024_JASA-SPI.docx  Mitchell2024_JASA-SPI.qmd  Mitchell2024_JASA-SPI.xml  Mitchell2024_SingleIndex.qmd  MultiSkewNorm.py  README.md  TargetOptimization.ipynb  _quarto.yml  index.html  index.ipynb  index.qmd  index.tex  index.typ  install.R  postBuild  pyproject.toml  requirements.txt  rpyskewnorm.py  scipydists.py  skew_normal.py  skew_normal_rpy2.py  skewnorm_test.ipynb  utils.py
.binder/: runtime.txt
.devcontainer/: Dockerfile  devcontainer.json  setup_env.sh
.github/workflows/: binder.yml
Mitchell2024_JASA-SPI-meca/: Mitchell2024_JASA-SPI.docx  manifest.xml
Mitchell2024_JASA-SPI-meca/source/: .gitignore  README.md  _quarto.yml  requirements.txt
_extensions/qtypst-arkheion/: _extension.yml  typst-show.typ  typst-template.typ
_manuscript/: SingleIndex-Code-preview.html  SingleIndex-Code.ipynb  SingleIndex-Code.out.ipynb  TargetOptimization-preview.html  TargetOptimization.out.ipynb  index.docx  index.html  skewnorm_test-preview.html  skewnorm_test.out.ipynb
_manuscript/_tex/: FellowshipRefs-biblatex.bib  index.tex
_manuscript/index-meca/: draft1.qmd  index.xml  manifest.xml
_manuscript/notebooks/: SingleIndex-Code-preview.html  SingleIndex-Code.out.ipynb  TargetOptimization-preview.html  TargetOptimization.out.ipynb  draft1-preview.html  draft1.out.ipynb  skewnorm_test-preview.html  skewnorm_test.out.ipynb
_tex/: Mitchell2024_JASA-SPI.tex
binder/: Dockerfile
drafts/: 2024-05-08_SPIDraft.docx  2024-05-09_SPIDraft.docx  2024-05-31_SPIDraft.docx  2024-05-31_SPIDraft_fa.docx
notebooks/: ISD v1.0 Data.csv  MultiSkewNorm.py  SingleIndex-Code-preview.html  SingleIndex-Code.html  SingleIndex-Code.ipynb  SingleIndex-Code.out.ipynb  TargetOptimization-preview.html  TargetOptimization.aux  TargetOptimization.html  TargetOptimization.ipynb  TargetOptimization.out.ipynb  TargetOptimization.tex  draft1.ipynb  elsarticle.cls  optimize_target.py  skew_normal_rpy2.py
paper/: Mitchell2024_JASA-SPI.html  SingleIndex-Code.html  SingleIndex-Code.ipynb  SingleIndex-Code.out.ipynb  TargetOptimization-preview.html  TargetOptimization.ipynb  TargetOptimization.out.ipynb  index.html  paper.html
paper/_tex/: index.tex
paper/notebooks/: SingleIndex-Code-preview.html  SingleIndex-Code.html  SingleIndex-Code.out.ipynb  TargetOptimization-preview.html  (+2 more)
scratch/: SSID-scratch.py
scripts/: MultiSkewNorm.py
submissions/: cover_letter_JASA.docx
tests/: test_rpyskewnorm.py
(+17 files in other folders)
