[project]
name = "single-index"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Andrew Mitchell", email = "mitchellacoustics15@gmail.com" }
]
dependencies = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.3",
    "pandas[excel]>=2.2.1",
    "rpy2==3.5.12",
    "circumplex>=0.1.4",
    "scikit-learn>=1.4.1.post1",
    "pathos>=0.3.2",
    "tqdm-pathos>=0.4",
    "pymoo>=0.6.1.3",
    "pyrecorder>=0.2.1",
    "setuptools>=70.0.0",
    "soundscapy>=0.7.4",
]
readme = "README.md"
requires-python = ">= 3.11"
license = { text = "BSD-3-Clause" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
    "ruff>=0.4.10",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/single_index"]
