[project]
name = "single-index"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Andrew Mitchell", email = "mitchellacoustics15@gmail.com" }
]
dependencies = [
    "rpy2==3.5.12",
    "pyrecorder>=0.2.1",
    "setuptools>=70.0.0",
    "pymoo>=0.6.1.3",
    "soundscapy>=0.7",
    "scikit-learn>=1.5.2",
    "pathos>=0.3.3",
    "tqdm-pathos>=0.4",
]
readme = "README.md"
requires-python = ">= 3.11"
license = { text = "BSD-3-Clause" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
]
